# redes_neuronales

./: 2.+Desarrollar+una+red+neuronal.ipynb  3.+Evaluar+el+rendimiento.ipynb  5.+Análisis+de+opiniones+de+películas.ipynb  5.+Proyecto+de+clasificación+multiclase.ipynb  6.+Práctica_PLN.ipynb  7.+Proyecto+de+regresión.ipynb  7.1.+Practica+CNN.ipynb  desarrollar_red_neuronal.py  main.py  pyproject.toml  red_convolucional_tp.py
