[project]
name = "datascience3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "tensorflow>=2.21.0",
]
